--- a/event.html
+++ b/event.html
@@ -13,7 +13,14 @@
        .event{
             width: 70%;
             background-color: pink;
-       }
+            
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            padding-top: 100px;
+            padding-bottom: 100px;
+        }
 
        .body{
         display: flex;
@@ -23,7 +30,6 @@
        .present{
         margin-top: 100px;
         width: 500px;
-
        }
 
     </style>
